avances responsive contact e imagenes principales

--- a/style/form.css
+++ b/style/form.css
@@ -159,51 +159,52 @@ outline-color: transparent;
     z-index: 50;
 }
 .btn-submit button{
-    color:#fff;
 	background-color:#011BEB;
 	outline: none;
     border: 0;
     color: #fff;
-	padding:2vh 2vw;
+	padding:5px 10px;
     text-transform:uppercase;
     border-radius:2px;
     cursor:pointer;
-    width: 50%;
 }
 .text-center h2{
     color: white;
     font-size: 5vh;
 }
 #formContact{
+    width: 90%;
     display: grid;
     grid-template-columns: 30% 60%;
     column-gap: 10%;
     row-gap: 5vh;
     background-color:rgb(18, 109, 245);
-    margin: 6vh 0vw;
+    margin: 6vh auto;
     border-radius: 1%;
     padding: 5vh 5vw;
     color: white;
-    font-size: 3vh;
+    font-size: 14px;
     font-weight: 600;
 }
 #formContact div textarea{
     width: 100%;
-    height: 15vh;
+    height: 80px;
 }
 #formContact label{
-    font-size: 3vh;
+    position: relative;
+    top: 6px;
+    font-size: 4vw;
 }
 #contactPage .btn-submit button{
     width: 70%;
-    font-size: 3vh;
+    font-size: 3.5vw;
 }
 .formBoxTask{
     position: fixed;
     left: -100%;
     top: 12vh;
     width:80%;
-    height: 68vh;
+    height: 67vh;
     color: white;
     background-color: rgb(18, 109, 245);
     border: 2px solid #011BEB;
@@ -215,8 +216,7 @@ outline-color: transparent;
     height: 100%;
 }
 main .formBoxTask:focus-within{
-    position: fixed;
-    left: 5%;
+    left: 10%;
 }
 .input-container-addTask{
     width: 100%;
@@ -233,9 +233,9 @@ font-weight: 500;
     width: 100%;
     height: 6vh;
 }
-.input-container-addTask button{
+/* .input-container-addTask button{
     width: 50%;
-}
+} */
 .formBoxEditTask{
     width: 80%;
     color: white;
@@ -308,8 +308,6 @@ font-weight: 500;
     .formBoxEditTask div .input-container-addTask{
         padding: 0;
         height: 16%;
-        background-color: tomato;
-        border: 2px solid thistle;
     }
     .formBoxEditTask .input-container-addTask textarea,
     .formBoxEditTask .input-container-addTask select,
@@ -318,6 +316,25 @@ font-weight: 500;
     }
 }
 @media only screen and (min-width: 480px){
+    
+    #formContact{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 30% 60%;
+        row-gap: 20px;
+        padding: 4vh 3vw;
+        color: white;
+        font-weight: 600;
+    }
+    #formContact label{
+        position: relative;
+        top: 4px;
+        font-size: 2.5vw;
+    }
+    #contactPage .btn-submit button{
+        width: 85%;
+        font-size: 16px;
+    }
     .formBoxLogin{
         padding: 5vh 40px;
     }
@@ -328,26 +345,28 @@ font-weight: 500;
         padding: 5vh 3vw;
     }
     #formContact label{
-        font-size: 1.5vw;
+        font-size: 18px;
     }
     .btn-form{
         padding:6px 21px;
     }
     .formBoxTask{
-        width:24%;
-        left: 2.5%;
-        top: 12vh;
+        width:26%;
+        height: 68vh;
+        left: 1%;
+        top: 5vh;
         font-size: 3vh;
     }
     .formBoxTask div{
         padding: 1vh 1vw;
+        border: 0.5px solid crimson;
     }
     .formBoxTask div .input-container-addTask button{
-        width: 80%;
         font-size: 3vh;
+        padding: 1vh 2vw;
     }
     main .formBoxTask:focus-within{
-        left: 2.5%;
+        left: 1%;
     }
 }
 @media only screen and (min-width: 1024px){
