--- a/view/registration.html
+++ b/view/registration.html
@@ -3,55 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/form.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="shortcut icon" href="../images/iconTask.icon"/>
     <title>Registratation</title>
 </head>
 <body>
-    <div class="container-fluid">
-    <main>
-        <div class="formBoxRegister">
-            <button type="button" class="btn-return-home">
-                <a class="btn" href="../">Return home page</a>
-            </button>
-            <form action="../controller/registration.php" method="POST">
-                <div class="form-container-register">
-                    <div class="text-center">
-                        <h2>REGISTER</h2>
-                    </div>
-                    <div class="input-container-register">
-                        <input name="firstName" type="text" required/>
-                        <label>First name</label>
-                    </div>
-                    <div class="input-container-register">
-                        <input name="lastName" type="text" required/>
-                        <label>Last name</label>
-                    </div>
-                    <div class="input-container-register">
-                        <input name="username" type="text" required=""/>
-                        <label>Username</label>
-                    </div>
-                    <div class="input-container-register">
-                        <input name="password" type="password" required/>
-                        <label>Password</label>
-                    </div>
-                    <div class="input-container-register">
-                        <input name="mail" type="email" required/>
-                        <label>Mail</label>
-                    </div>
-                    <div class="text-right link-login-register">
-                        <a href="./login.html" class="link">
-                            GO TO LOGIN
-                        </a>
-                    </div>
-                    <div class="btn-submit">
-                        <button type="submit">submit</button>
-                    </div>
+    <div class="contenedor">
+    <div class="formBoxRegister">
+        <button type="button" class="btn-return-home">
+            <a class="btn" href="../">Return home page</a>
+        </button>
+        <form action="../controller/registration.php" method="POST">
+            <div class="form-container-register">
+                <div>
+                    <h2>REGISTER</h2>
                 </div>
-            </form>
-        </div>
-    </main>
+                <div class="input-container-register">
+                    <input name="firstName" type="text" required/>
+                    <label>First name</label>
+                </div>
+                <div class="input-container-register">
+                    <input name="lastName" type="text" required/>
+                    <label>Last name</label>
+                </div>
+                <div class="input-container-register">
+                    <input name="username" type="text" required=""/>
+                    <label>Username</label>
+                </div>
+                <div class="input-container-register">
+                    <input name="password" type="password" required/>
+                    <label>Password</label>
+                </div>
+                <div class="input-container-register">
+                    <input name="mail" type="email" required/>
+                    <label>Mail</label>
+                </div>
+                <div class="link-login-register">
+                    <a href="./login.html" class="link">
+                        GO TO LOGIN
+                    </a>
+                </div>
+                <div class="btn-submit">
+                    <button type="submit">submit</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
 
 </body>
